# tools

./: .gitignore  .gitmodules  4on4off.py  README.md  clock.html
CAA/: 2024.xlsx  2025.xlsx  add_mem.py  audit.py  duplicats_mem.py  generate_member.py  search_name.py  search_no.py  search_util.py  stat.py
cpp/: .gitignore
cpp/cli/: .gitignore  SConscript  SConstruct  add.cpp  add.h  build.sh  cli.cpp  compile_commands.json  log.cpp  log.h  multiply.cpp  multiply.h  stacktrace.h
cpp/cli/src/: add.cpp  add.h  cli.cpp  common.cpp  common.h  encdec_demo.cpp  encdec_demo.h  json_demo.cpp  json_demo.h  main.cpp  multiply.cpp  multiply.h  stacktrace.cpp
cpp/lib/enc_dec/: alphabet.hpp  encode_decode.hpp
cpp/lib/log_setup/: log.cpp  log.h
cpp/lib/misc/: misc.cpp  misc.h
cpp/lib/non_swapple_memory/: non_swapple_allocator.h
cpp/lib/profiler/: profiler.h
cpp/lib/resource-pool/: resource_pool.h
cpp/lib/rwlock/: rwlock.h
cpp/lib/rwmap/: rwmap.h
py/: 4on4off.py  certs_diag.py  diff.py  dl_img.py  fac.py  ffmpeg.py  foreach.py  iter_folder.py  json_tree.py  subPalindrome.py  to_mp4.py  utils.py
py/lib/: ansi_escape.py  color_print.py  constants.py  folder.py  local_shell.py  log.py
py/not-ready/qutil-openssl-cmd/qutil/openssl3_cmd/: cli.py
py/not-ready/qutil-openssl-cmd/tests/: test_core.py
py/not-ready/qutil-openssl-cnf/qutil/opensslcnf/: parser.py
py/not-ready/qutil-socket/qutil/socket/: cli.py
py/qutil_libs/: .gitignore  install.sh  qutil_console-0.1.0-py3-none-any.whl  qutil_filesystem-0.1.0-py3-none-any.whl  qutil_log-0.1.0-py3-none-any.whl  qutil_mount-0.1.0-py3-none-any.whl  qutil_shell-0.1.0-py3-none-any.whl  uninstall.sh
py/qutil_libs/build_scripts/: install.sh
py/qutil_libs/not-ready/qutil-openssl-cmd/qutil/openssl3_cmd/: openssl3.py
py/qutil_libs/not-ready/qutil-openssl-cnf/: pyproject.toml
py/qutil_libs/not-ready/qutil-openssl-cnf/tests/: test_core.py
py/qutil_libs/qutil-cli/: README.md  pyproject.toml
py/qutil_libs/qutil-cli/qutil/cli/: fac.py
py/qutil_libs/qutil-cli/tests/: test_core.py
py/qutil_libs/qutil-console/: README.md  pyproject.toml
py/qutil_libs/qutil-console/qutil/console/: ansi_escape.py  cli.py  color_print.py  constants.py  core.py
py/qutil_libs/qutil-console/tests/: test_core.py
py/qutil_libs/qutil-diffdir/: README.md  diff.html  pyproject.toml
py/qutil_libs/qutil-diffdir/qutil/diffdir/: cli.py  diff.py
py/qutil_libs/qutil-diffdir/tests/: test_basic.py
py/qutil_libs/qutil-filesystem/: README.md  pyproject.toml
py/qutil_libs/qutil-filesystem/qutil/filesystem/: backup.py  cli.py  folder.py
py/qutil_libs/qutil-filesystem/tests/: test_core.py
py/qutil_libs/qutil-jiraissue/: README.md  example_config.yaml  pyproject.toml
py/qutil_libs/qutil-jiraissue/qutil/jiraissue/: cli.py  client.py
py/qutil_libs/qutil-log/: .gitignore  README.md  pyproject.toml
py/qutil_libs/qutil-log/qutil/log/: cli.py  log.py
py/qutil_libs/qutil-log/tests/: test_core.py
py/qutil_libs/qutil-mount/: README.md  pyproject.toml
py/qutil_libs/qutil-mount/qutil/mount/: cli.py  mount.py
py/qutil_libs/qutil-mount/tests/: test_core.py
py/qutil_libs/qutil-openssl-cmd/: README.md  pyproject.toml
py/qutil_libs/qutil-openssl-cmd/qutil/openssl3_cmd/: __init__.py  s_client.py
py/qutil_libs/qutil-openssl-cmd/qutil/shell/: cli.py
py/qutil_libs/qutil-openssl-cnf/: LICENSE  README.md
py/qutil_libs/qutil-openssl-cnf/qutil/opensslcnf/: cli.py
py/qutil_libs/qutil-shell/: README.md  pyproject.toml  requirements.txt
py/qutil_libs/qutil-shell/qutil/shell/: cli.py  local.py
py/qutil_libs/qutil-shell/tests/: test_core.py
py/qutil_libs/qutil-socket/: README.md  pyproject.toml
py/qutil_libs/qutil-socket/qutil/socket/: socket_reader.py
py/qutil_libs/qutil-socket/tests/: test_core.py
py/qutil_libs/qutil-xxx/: README.md  pyproject.toml
py/qutil_libs/qutil-xxx/qutil/xxx/: __init__.py  cli.py  core.py
py/qutil_libs/qutil-xxx/tests/: test_basic.py  test_core.py
video_audio/: to_mp4.sh
