[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qutil-console"
version = "0.1.0"
description = "A namespace package qutil.console"
authors = [
    { name = "qutil", email = "qutil@example.com" }
]
license = "MIT"  # Or your license identifier, e.g., "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.0"
]
license-files = ["LICENSE"]  # <-- Move here

[project.scripts]
qutil-console= "qutil.console.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["qutil.*"]
namespaces = true