[project]
name = "qutil-jiraissue"
version = "0.1.0"
description = "Short description of qutil-xxx."
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"

requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = [
   "jira",
   "loguru"
]


[project.urls]
Homepage = "https://github.com/yourname/qutil-jiraissue"

[project.scripts]
qutil-jiraissue = "qutil.jiraissue.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["qutil.*"]
namespaces = true
