[project]
name = "qutil-xxx"
version = "0.1.0"
description = "Short description of qutil-xxx."
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"

requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = []

[tool.setuptools.packages.find]
where = ["qutil"]
namespaces = true

[project.urls]
Homepage = "https://github.com/yourname/qutil-xxx"

[project.scripts]
qutil-xxx = "qutil.xxx.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
