[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qutil-xxx"
version = "0.1.0"
description = "A namespace package qutil.xxx"
authors = [
    { name = "qutil", email = "qutil@example.com" }
]
license = "MIT"  # Or your license identifier, e.g., "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.0",
    "qutil-log>=0.1.0",
    "rich>=13.0",
]
license-files = ["LICENSE"]  # <-- Move here

[project.scripts]
qutil-xxx= "qutil.xxx.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["qutil.*"]
namespaces = true