[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qutil-opensslcnf"
version = "0.1.0"
description = "A namespace package qutil.opensslcnf"
authors = [
    { name = "qutil", email = "qutil@example.com" }
]
license = "MIT"  # Or your license identifier, e.g., "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.2",
]
license-files = ["LICENSE"]  # <-- Move here

[project.scripts]
qutil-opensslcnf= "qutil.opensslcnf.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["qutil.*"]
namespaces = true

[tool.black]
line-length = 79

